--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -8,8 +8,8 @@
 }
 
 .fondo {
-    background-color: rgb(10, 161, 10);
-    background-color: linear-gradient(315deg, #95ff8e 0%, #a4d1a8 74%);
+    background-color: #3cdf4f;
+    background-image: linear-gradient(315deg, #63d471 0%, #20af0d 74%);
 }
 
 .fondo2 {
